<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioSortNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_new"
            android:checked="true"
            android:textSize="@dimen/sp_20" />

        <RadioButton
            android:id="@+id/radioSortOld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_old"
            android:textSize="@dimen/sp_20" />

        <RadioButton
            android:id="@+id/radioSortIncrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_increase"
            android:textSize="@dimen/sp_20" />

        <RadioButton
            android:id="@+id/radioSortDecrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_decrease"
            android:textSize="@dimen/sp_20" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginVertical="@dimen/dp_10"
        android:background="@drawable/bg_button"
        android:text="@string/text_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_40"
        android:layout_marginVertical="@dimen/dp_10"
        android:background="@drawable/bg_button"
        android:text="@string/text_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>
